--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-intersection-observer": "^9.2.2",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^4.0.0"
+  },
+  "homepage": "./"
 }
